# rules_proto

./: .bazelrc  .gitattributes  .gitignore  BUILD  CODEOWNERS  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  dev_deps.bzl  package.json  pnpm-lock.yaml
.bazelci/: presubmit.yml
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: mirror_protoc_release.yml  release.yml  release_prep.sh
docs/: BUILD  defs.md  stardoc_with_diff_test.bzl
examples/cc/: BUILD.bazel
examples/go/: BUILD.bazel  main.go
examples/go/pb/: BUILD.bazel  help.proto
examples/ts/: BUILD.bazel  help.proto  main.ts  tsconfig.json
lang/cc/: BUILD.bazel  cc_proto_library.bzl
lang/go/: BUILD.bazel  go_proto_library.bzl
lang/ts/: BUILD.bazel  ts_proto_library.bzl
proto/: BUILD  defs.bzl  extensions.bzl  lang_toolchain.bzl  proto_common.bzl  proto_descriptor_set.bzl  proto_lang_toolchain.bzl  proto_library.bzl  proto_toolchain.bzl  repositories.bzl  setup.bzl  toolchain.bzl  toolchains.bzl
proto/modules/: BUILD  proto_common.bzl  proto_info.bzl  proto_lang_toolchain_info.bzl
proto/private/: BUILD  BUILD.protobuf_cc  BUILD.protoc  BUILD.protoc_windows  BUILD.release  bzlmod_deps.bzl  common.bzl  dependencies.bzl  generate_sums.sh  native.bzl  versions.bzl
proto/private/protoc/: mirror_protoc_release.sh  prebuilt_protoc_toolchain.bzl  protoc_toolchains.bzl  versions.bzl
proto/private/repositories/: BUILD  proto_bazel_config.bzl  proto_bazel_config_defs.bzl
proto/private/rules/: BUILD  proto_descriptor_set.bzl  proto_toolchain.bzl  proto_toolchain_alias.bzl  proto_toolchain_rule.bzl
proto/private/utils/: direct_source_infos.bzl
proto/toolchains/: BUILD  proto_lang_toolchain.bzl  proto_toolchain.bzl
scripts/: mirror_releases.sh
tests/: BUILD
tests/analysis/: BUILD  proto_common_contains_native_fields_test.bzl
tests/current_toolchain/: BUILD.bazel  test_protoc_help_from_current_proto_toolchain.sh
tests/load_from_macro/: BUILD
tests/prefix/: empty.proto
tests/proto_common/: BUILD.bazel  toolchains.bzl
tests/rules/proto_descriptor_set/: BUILD  proto_descriptor_set_test.cc
tests/utils/: BUILD  direct_source_infos_tests.bzl  workspace_constants.h
tools/: mirror_releases.sh
tools/file_concat/: BUILD  main.cc
tools/protoc/: mirror_protoc_release.sh  versions.bzl
